# Synthtax

./: .gitignore  CMakeLists.txt  CppTranspilerVisitor.h  IRBuilder.h  LICENSE  README.md  Synthtax.cpp  Synthtax.g4  SynthtaxLexer.g4  SynthtaxParser.g4  TParser.g4  Visitor.h  generate.sh  main.cpp
CMake/: LLVM.cmake
cmake/.svn/: wc.db
include/: builtin.h  lexer.h  lexer1.h
include/sndfile/: sndfile.h
include/synths/: ADSR.hpp  Oscillator.hpp  builtin.hpp
lib/: lexer.cpp
libs/: Synthtax.interp  SynthtaxBaseVisitor.cpp  SynthtaxBaseVisitor.h  SynthtaxLexer.cpp  SynthtaxLexer.h  SynthtaxLexer.interp  SynthtaxLexer.tokens  SynthtaxParser.cpp  SynthtaxParser.h  SynthtaxParser.interp  SynthtaxParser.tokens  SynthtaxParserBaseListener.cpp  SynthtaxParserBaseListener.h  SynthtaxParserBaseVisitor.cpp  SynthtaxParserBaseVisitor.h  SynthtaxParserListener.cpp  SynthtaxParserListener.h  SynthtaxParserVisitor.cpp  SynthtaxParserVisitor.h  SynthtaxVisitor.cpp  SynthtaxVisitor.h
src/: musicpp.cpp  synthtax.cpp
src/ast/: ast.cpp  ast.h
src/lexer/: lexer.cpp
src/visitor/: visitor.h
test/: .addOsc.in.swp  .playOsc.in.swp  addExpr.in  addOsc.in  adsr.in  args.in  assignmentStm.in  block.in  funCall.in  header.in  hello.in  ifExpr.in  loop.in  mathExpr.in  mini.in  multOsc.in  playOsc.in  print.in  subOsc.in  varDecl.in
test/code/: my_program  my_program.cpp  program  tutorial.cpp  wav.cpp  write.cpp
test/synths/: adsr.cpp  oscillator.cpp
